<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="false"
    android:layout_margin="7dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tV_eventcV_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/tV_eventcV_date"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tV_eventcV_hour"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tV_eventcV_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/tV_eventcV_hour"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tV_eventcV_date"
            app:layout_constraintStart_toStartOf="@+id/tV_eventcV_date"
            app:layout_constraintTop_toBottomOf="@+id/tV_eventcV_date" />

        <LinearLayout
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="?android:attr/listDivider"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tV_eventcV_date"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <ImageView
            android:id="@+id/imgV_eventcV_home_badge"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imgV_eventcV_home_badge_cD"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/imgV_eventcV_away_badge"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_soccer_ball" />

        <ImageView
            android:id="@+id/imgV_eventcV_away_badge"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/imgV_eventcV_away_badge_cD"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imgV_eventcV_home_badge"
            app:layout_constraintStart_toStartOf="@+id/imgV_eventcV_home_badge"
            app:srcCompat="@drawable/ic_soccer_ball" />

        <TextView
            android:id="@+id/tV_eventcV_home_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:text="@string/tV_eventcV_home_team"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tV_eventcV_vs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgV_eventcV_home_badge"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tV_eventcV_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:text="@string/tV_eventcV_vs"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tV_eventcV_away_team"
            app:layout_constraintEnd_toEndOf="@+id/tV_eventcV_home_team"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tV_eventcV_home_team"
            app:layout_constraintTop_toBottomOf="@+id/tV_eventcV_home_team" />

        <TextView
            android:id="@+id/tV_eventcV_away_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:text="@string/tV_eventcV_away_team"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tV_eventcV_home_team"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tV_eventcV_home_team"
            app:layout_constraintTop_toBottomOf="@+id/tV_eventcV_vs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>